Separated database logic from website logic
Implemented .sql scripts for populating initial roles and users
Reimplemented password hashing

--- a/.gitignore
+++ b/.gitignore
@@ -363,8 +363,9 @@ MigrationBackup/
 FodyWeavers.xsd
 
 # CUSTOM
-randomJunk/
 .vscode/
-sql/role_select.sql
-sql/user_delete.sql
-sql/user_select.sql
+db/sql/role_select.sql
+db/sql/role_insert.sql
+db/sql/user_delete.sql
+db/sql/user_select.sql
+db/sql/user_insert.sql
