Added IS_DEBUG environment variable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
         args:
             - ip_address=10.5.0.6
             - port=8000
+            - is_debug=False
             - worker_threads=12
         environment:
             - PUID=1000
