Relocated config.ini and database.db so that both may be persisted in a docker volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,3 +41,5 @@ services:
             - PUID=1000
             - PGID=1000
             - TZ=Europe/London
+        volumes:
+            - /docker/containers/QAWebApplication/data:/app/data
