--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,4 +42,4 @@ services:
             - PGID=1000
             - TZ=Europe/London
         volumes:
-            - /docker/containers/QAWebApplication/data:/app/data
+            - /docker/containers/QAWebApplication/data:/data
