--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,8 @@ services:
             - IP_ADDRESS=0.0.0.0
             - PORT=9500
             - IS_DEBUG=TRUE
-            - WORKER_THREADS=12
+            - WORKERS=3
+            - WORKER_THREADS=3
             - PUID=1000
             - PGID=1000
             - TZ=Europe/London
